--- a/index.html
+++ b/index.html
@@ -193,8 +193,85 @@
       </section>
       <!-- end section -->
 
+      <!-- 'Theme' section -->
+      <section class="layout_padding" id="theme">
+         <div class="container mb-5 wow fadeInDown" style="min-height: 1000px;">
+            <div class="row">
+               <div class="col-md-12">
+                  <div class="full heading_s1">
+                     <h3>Theme Showcase</h3>
+                  </div>
+               </div>
+            </div>
+            <div class="row mb-5">
+               <div class="col-md-4 col-12">
+                  <div class="full decorate_blog">
+                     <img src="images/why_us_img1.png" alt="#" />
+                     <a class="decorate_blog_bt" href="why_us.html">Free Design</a>
+                  </div>
+               </div>
+               <div class="col-md-4 col-12">
+                  <div class="full decorate_blog">
+                     <img src="images/why_us_img2.png" alt="#" />
+                     <a class="decorate_blog_bt" href="why_us.html">Ready in 2 weeks</a>
+                  </div>
+               </div>
+               <div class="col-md-4 col-12">
+                  <div class="full decorate_blog">
+                     <img src="images/why_us_img3.png" alt="#" />
+                     <a class="decorate_blog_bt" href="why_us.html">Affordable</a>
+                  </div>
+               </div>
+               <div class="col-md-4 col-12">
+                  <div class="full decorate_blog">
+                     <img src="images/why_us_img1.png" alt="#" />
+                     <a class="decorate_blog_bt" href="why_us.html">Free Design</a>
+                  </div>
+               </div>
+               <div class="col-md-4 col-12">
+                  <div class="full decorate_blog">
+                     <img src="images/why_us_img2.png" alt="#" />
+                     <a class="decorate_blog_bt" href="why_us.html">Ready in 2 weeks</a>
+                  </div>
+               </div>
+               <div class="col-md-4 col-12">
+                  <div class="full decorate_blog">
+                     <img src="images/why_us_img3.png" alt="#" />
+                     <a class="decorate_blog_bt" href="why_us.html">Affordable</a>
+                  </div>
+               </div>
+               <div class="col-md-4 col-12">
+                  <div class="full decorate_blog">
+                     <img src="images/why_us_img1.png" alt="#" />
+                     <a class="decorate_blog_bt" href="why_us.html">Free Design</a>
+                  </div>
+               </div>
+               <div class="col-md-4 col-12">
+                  <div class="full decorate_blog">
+                     <img src="images/why_us_img2.png" alt="#" />
+                     <a class="decorate_blog_bt" href="why_us.html">Ready in 2 weeks</a>
+                  </div>
+               </div>
+               <div class="col-md-4 col-12">
+                  <div class="full decorate_blog">
+                     <img src="images/why_us_img3.png" alt="#" />
+                     <a class="decorate_blog_bt" href="why_us.html">Affordable</a>
+                  </div>
+               </div>
+            </div>
+            <div class="row">
+               <div class="col-sm-12">
+                  <div class="full">
+                     <a class="read_more_bt" href="#">Explore More</a>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <!-- end section -->
+
       <!-- 'Makeover package' section -->
-      <section class="layout_padding design_layout">
+      <!-- <section class="layout_padding design_layout">
          <div class="container wow fadeInDown">
             <div class="row">
                <div class="col-md-7">
@@ -216,7 +293,7 @@
                </div>
             </div>
          </div>
-      </section>
+      </section> -->
       <!-- end section -->
 
       <!-- 'Packages' section -->
