--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
          <li><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></li>
          <li><a href="index.html">Home</a></li>
          <li><a href="about.html">About Us</i></a></li>
-         <li><a href="why_us.html">Why Us</a></li>
+         <li><a href="themes.html">Themes</a></li>
          <li><a href="packages.html">Packages</a></li>
          <li><a href="contact.html">Contact Us</a></li>
       </ul>
