remove unused js

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       <!-- wow animation css -->
       <link rel="stylesheet" href="css/animate.css" />
       <!-- Revolution Loaling Fonts and Icons  -->
-      <link rel="stylesheet" href="js/revolution/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
+      <!-- <link rel="stylesheet" href="js/revolution/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css"> -->
       <!-- Revolution style Sheets  -->
-      <link rel="stylesheet" href="js/revolution/css/settings.css">
+      <!-- <link rel="stylesheet" href="js/revolution/css/settings.css">
       <link rel="stylesheet" href="js/revolution/css/layers.css">
-      <link rel="stylesheet" href="js/revolution/css/navigation.css">
+      <link rel="stylesheet" href="js/revolution/css/navigation.css"> -->
       <!-- owl stylesheets -->
       <link rel="stylesheet" href="css/owl.carousel.min.css">
       <link rel="stylesheet" href="css/owl.theme.default.css">
