change bg location

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <!-- End Banner Slider -->
 
       <!-- 'About Us' section -->
-      <section class="layout_padding" id="aboutUs" style="background-image: url(/img/bg_about_us.png); background-size: auto;">
+      <section class="layout_padding" id="aboutUs" style="background-image: url(img/bg_about_us.png); background-size: auto;">
          <div class="container wow fadeInDown">
             <div class="row">
                <div class="col-12">
@@ -146,7 +146,7 @@
       <!-- end section -->
 
       <!-- 'Why Us' section -->
-      <section class="layout_padding" style="background-image: url(/img/bg_why_us.png);" id="whyUs">
+      <section class="layout_padding" style="background-image: url(img/bg_why_us.png);" id="whyUs">
          <div class="container mb-5 wow fadeInDown px-xl-0 px-5" style="min-height: 650px;">
             <div class="row">
                <div class="col-md-12">
