--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                            <div class="col-xl-6 col-12 my-xl-3 my-1">
                               <img src="images/theme_img/wabisabi_halo/wabisabi_halo_img3.png" alt="#" />
                            </div>
-                           <div class="col-xl-6 col-12 my-xl-3 my-1">
+                           <div class="col-xl-6 col-12 my-xl-3 my-1 d-xl-block d-none">
                               <img src="images/theme_img/wabisabi_halo/wabisabi_halo_img4.png" alt="#" />
                            </div>
 
@@ -246,7 +246,7 @@
                            <div class="col-xl-6 col-12 my-xl-3 my-1">
                               <img src="images/theme_img/the_french/the_french_img3.png" alt="#" />
                            </div>
-                           <div class="col-xl-6 col-12 my-xl-3 my-1">
+                           <div class="col-xl-6 col-12 my-xl-3 my-1 d-xl-block d-none">
                               <img src="images/theme_img/the_french/the_french_img4.png" alt="#" />
                            </div>
 
@@ -266,7 +266,7 @@
                            <div class="col-xl-6 col-12 my-xl-3 my-1">
                               <img src="images/theme_img/farm_house/farm_house_img3.png" alt="#" />
                            </div>
-                           <div class="col-xl-6 col-12 my-xl-3 my-1">
+                           <div class="col-xl-6 col-12 my-xl-3 my-1 d-xl-block d-none">
                               <img src="images/theme_img/farm_house/farm_house_img4.png" alt="#" />
                            </div>
 
@@ -287,7 +287,7 @@
                            <div class="col-xl-6 col-12 my-xl-3 my-1">
                               <img src="images/theme_img/roasted_caramel/roasted_caramel_img3.png" alt="#" />
                            </div>
-                           <div class="col-xl-6 col-12 my-xl-3 my-1">
+                           <div class="col-xl-6 col-12 my-xl-3 my-1 d-xl-block d-none">
                               <img src="images/theme_img/roasted_caramel/roasted_caramel_img4.png" alt="#" />
                            </div>
                            
