--- a/about.html
+++ b/about.html
@@ -86,109 +86,65 @@
    </div>
    <!-- End Banner Slider -->
 
-   <!-- section -->
-   <section class="layout_padding what_we_do">
-      <div class="container">
+   <!-- 'About Us' section -->
+   <section class="layout_padding" id="aboutUs" style="background-image: url(img/bg_about_us.png); background-size: auto;">
+      <div class="container wow fadeInDown">
          <div class="row">
-            <div class="col-md-3">
-               <div class="full decorate_blog">
-                  <img src="images/sm1.png" alt="#" />
-                  <a class="decorate_blog_bt" href="hd.html">Home Decorate</a>
-               </div>
-            </div>
-            <div class="col-md-3">
-               <div class="full decorate_blog">
-                  <img src="images/sm2.png" alt="#" />
-                  <a class="decorate_blog_bt" href="od.html">Office Decorate</a>
-               </div>
-            </div>
-            <div class="col-md-3">
-               <div class="full decorate_blog">
-                  <img src="images/sm3.png" alt="#" />
-                  <a class="decorate_blog_bt" href="fd.html">Furniture Decorate</a>
-               </div>
-            </div>
-            <div class="col-md-3">
-               <div class="full decorate_blog">
-                  <img src="images/sm4.png" alt="#" />
-                  <a class="decorate_blog_bt" href="ld.html">Lighting Decorate</a>
-               </div>
-            </div>
-         </div>
-         <div class="row">
-            <div class="col-md-3">
-               <div class="full decorate_blog">
-                  <img src="images/sm1.png" alt="#" />
-                  <a class="decorate_blog_bt" href="hd.html">Home Decorate</a>
-               </div>
-            </div>
-            <div class="col-md-3">
-               <div class="full decorate_blog">
-                  <img src="images/sm2.png" alt="#" />
-                  <a class="decorate_blog_bt" href="od.html">Office Decorate</a>
-               </div>
-            </div>
-            <div class="col-md-3">
-               <div class="full decorate_blog">
-                  <img src="images/sm3.png" alt="#" />
-                  <a class="decorate_blog_bt" href="fd.html">Furniture Decorate</a>
-               </div>
-            </div>
-            <div class="col-md-3">
-               <div class="full decorate_blog">
-                  <img src="images/sm4.png" alt="#" />
-                  <a class="decorate_blog_bt" href="ld.html">Lighting Decorate</a>
-               </div>
-            </div>
-         </div>
-         <div class="row">
-            <div class="col-sm-12">
-               <div class="full">
-                  <a class="read_more_bt float-right" href="#">Read More</a>
-               </div>
+            <div class="col-12">
+               <div class="row">
+                  <div class="col-xl-7 col-12 p-relative r-left d-xl-block d-none">
+                     <div class="full back_blog text_align_center padding_right_left_15">
+                        <img src="img/about_us.png" alt="#" />
+                     </div>
+                  </div>
+                  <div class="col-xl-5 col-12 px-xl-0 px-5">
+                     <div class="full heading_s1">
+                        <h3>About Us</h3>
+                        <ul>
+                           <li><p>Specialize in providing affordable property makeover solutions for both residential and commercial properties.</p></li>
+                           <li><p>As property investors ourselves, we truly understand what an investor needs: To stand out from competitors, generate higher rental yield, with minimal spending.</p></li>
+                        </ul>
+                     </div>
+                     <div class="full">
+                        <div class="d-flex justify-content-xl-start justify-content-center">
+                           <a class="read_more_bt" href="about.html">Read More</a>
+                        </div>
+                     </div>
+                  </div>
+               </div>               
             </div>
          </div>
       </div>
    </section>
    <!-- end section -->
-   <!-- section -->
-   <section class="layout_padding about_section">
-      <div class="container">
+   <!-- 'Why Us' section -->
+   <section class="layout_padding" style="background-image: url(img/bg_why_us.png);" id="whyUs">
+      <div class="container mb-5 wow fadeInDown px-xl-0 px-5" style="min-height: 650px;">
          <div class="row">
-            <div class="col-md-7 p-relative r-left">
-               <div class="full back_blog text_align_center padding_right_left_15">
-                  <img src="images/wd_1.png" alt="#" />
-               </div>
-            </div>
-            <div class="col-md-5">
+            <div class="col-md-12">
                <div class="full heading_s1">
-                  <h3>Best Home Decoration</h3>
-                  <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum..</p>
-               </div>
-               <div class="full">
-                  <a class="read_more_bt" href="#">Get A Quote</a>
+                  <h3>Why Us</h3>
+                  <p><strong>Free consultation</strong>. <strong>Free design</strong>. <strong>Flexible</strong>. <strong>Fast handover</strong> in within 14 days, shorten you unit's vacant period. Most importantly, the most affordable makeover package in town.</p>
                </div>
             </div>
          </div>
-      </div>
-   </section>
-   <!-- end section -->
-   <!-- section -->
-   <section class="layout_padding about_section">
-      <div class="container">
-         <div class="row">
-            <div class="col-md-7 p-relative r-left">
-               <div class="full back_blog text_align_center padding_right_left_15">
-                  <img src="images/wd_2.png" alt="#" />
+         <div class="row mb-5">
+            <div class="col-md-4 col-12">
+               <div class="full decorate_blog">
+                  <img src="images/why_us_img1.png" alt="#" />
+                  <a class="decorate_blog_bt" href="about.html">Free Design</a>
                </div>
             </div>
-            <div class="col-md-5">
-               <div class="full heading_s1">
-                  <h3>Best office Lighting</h3>
-                  <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum..</p>
+            <div class="col-md-4 col-12">
+               <div class="full decorate_blog">
+                  <img src="images/why_us_img2.png" alt="#" />
+                  <a class="decorate_blog_bt" href="about.html">Ready in 2 weeks</a>
                </div>
-               <div class="full">
-                  <a class="read_more_bt" href="#">Get A Quote</a>
+            </div>
+            <div class="col-md-4 col-12">
+               <div class="full decorate_blog">
+                  <img src="images/why_us_img3.png" alt="#" />
+                  <a class="decorate_blog_bt" href="about.html">Affordable</a>
                </div>
             </div>
          </div>
@@ -204,8 +160,8 @@
                <div class="full footer_top">
                   <div class="container">
                      <div class="row">
-                        <div class="col-md-2"></div>
-                        <div class="col-md-4 col-12">
+                        <div class="col-xl-2 col-12"></div>
+                        <div class="col-xl-4 col-12">
                            <div class="full f_logo">
                               <img src="img/logo_home_small.png" alt="#" width="200px"/>
                            </div>
@@ -213,17 +169,17 @@
                               <p>Interior styling & property makeover with most afforable price in town.</p>
                            </div>
                         </div>
-                        <div class="col-md-1"></div>
-                        <div class="col-md-4 col-12">
+                        <div class="col-xl-1"></div>
+                        <div class="col-xl-4 col-12">
                            <div class="full heading_footer">
                               <h3>Menu</h3>
                            </div>
                            <div class="full">
                               <ul class="footer_link">
-                                 <li><a href="index.html#home">Home</a></li>
-                                 <li><a href="index.html#aboutUs">About Us</a></li>
-                                 <li><a href="index.html#whyUs">Why Us</a></li>
-                                 <li><a href="index.html#packages">Packages</a></li>
+                                 <li><a href="#home">Home</a></li>
+                                 <li><a href="#aboutUs">About Us</a></li>
+                                 <li><a href="#whyUs">Why Us</a></li>
+                                 <li><a href="#packages">Packages</a></li>
                               </ul>
                            </div>
                         </div>
@@ -244,23 +200,23 @@
                               </ul>
                            </div>
                         </div> -->
-                        <div class="col-md-12">
+                        <div class="col-xl-12">
                            <div class="row margin_top_50">
-                              <div class="col-md-10 offset-md-1">
+                              <div class="col-xl-10 col-12 offset-xl-1">
                                  <div class="row">
-                                    <div class="col-sm-4">
+                                    <div class="col-xl-4 col-12 mb-xl-0 mb-2">
                                        <div class="full cont_info">
                                           <i class="fa fa-map-marker"></i>
                                           <span>Klang Valley, Selangor <sup>MY</sup></span>
                                        </div>
                                     </div>
-                                    <div class="col-sm-4">
+                                    <div class="col-xl-4 col-12 mb-xl-0 mb-2">
                                        <div class="full cont_info">
                                           <i class="fa fa-phone"></i>
-                                          <span>016 7173 814</span>
+                                          <span>016 7173 814</span>   
                                        </div>
                                     </div>
-                                    <div class="col-sm-4">
+                                    <div class="col-xl-4 col-12 mb-xl-0 mb-2">
                                        <div class="full cont_info">
                                           <i class="fa fa-envelope" style="font-size: 17px;"></i>
                                           <span>homismakeover@gmail.com</span>
