--- a/about.html
+++ b/about.html
@@ -105,11 +105,11 @@
                            <li><p>As property investors ourselves, we truly understand what an investor needs: To stand out from competitors, generate higher rental yield, with minimal spending.</p></li>
                         </ul>
                      </div>
-                     <div class="full">
+                     <!-- <div class="full">
                         <div class="d-flex justify-content-xl-start justify-content-center">
                            <a class="read_more_bt" href="about.html">Read More</a>
                         </div>
-                     </div>
+                     </div> -->
                   </div>
                </div>               
             </div>
@@ -132,19 +132,19 @@
             <div class="col-md-4 col-12">
                <div class="full decorate_blog">
                   <img src="images/why_us_img1.png" alt="#" />
-                  <a class="decorate_blog_bt" href="about.html">Free Design</a>
+                  <a class="decorate_blog_bt" href="#">Free Design</a>
                </div>
             </div>
             <div class="col-md-4 col-12">
                <div class="full decorate_blog">
                   <img src="images/why_us_img2.png" alt="#" />
-                  <a class="decorate_blog_bt" href="about.html">Ready in 2 weeks</a>
+                  <a class="decorate_blog_bt" href="#">Ready in 2 weeks</a>
                </div>
             </div>
             <div class="col-md-4 col-12">
                <div class="full decorate_blog">
                   <img src="images/why_us_img3.png" alt="#" />
-                  <a class="decorate_blog_bt" href="about.html">Affordable</a>
+                  <a class="decorate_blog_bt" href="#">Affordable</a>
                </div>
             </div>
          </div>
@@ -176,10 +176,11 @@
                            </div>
                            <div class="full">
                               <ul class="footer_link">
-                                 <li><a href="#home">Home</a></li>
-                                 <li><a href="#aboutUs">About Us</a></li>
-                                 <li><a href="#whyUs">Why Us</a></li>
-                                 <li><a href="#packages">Packages</a></li>
+                                 <li><a href="index.html#home">Home</a></li>
+                                 <li><a href="index.html#aboutUs">About Us</a></li>
+                                 <li><a href="index.html#whyUs">Why Us</a></li>
+                                 <li><a href="index.html#themes">Themes</a></li>
+                                 <li><a href="index.html#packages">Packages</a></li>
                               </ul>
                            </div>
                         </div>
