--- a/contact.html
+++ b/contact.html
@@ -147,8 +147,8 @@
                   <div class="full footer_top">
                      <div class="container">
                         <div class="row">
-                           <div class="col-md-2"></div>
-                           <div class="col-md-4 col-12">
+                           <div class="col-xl-2 col-12"></div>
+                           <div class="col-xl-4 col-12">
                               <div class="full f_logo">
                                  <img src="img/logo_home_small.png" alt="#" width="200px"/>
                               </div>
@@ -156,8 +156,8 @@
                                  <p>Interior styling & property makeover with most afforable price in town.</p>
                               </div>
                            </div>
-                           <div class="col-md-1"></div>
-                           <div class="col-md-4 col-12">
+                           <div class="col-xl-1"></div>
+                           <div class="col-xl-4 col-12">
                               <div class="full heading_footer">
                                  <h3>Menu</h3>
                               </div>
@@ -166,6 +166,7 @@
                                     <li><a href="index.html#home">Home</a></li>
                                     <li><a href="index.html#aboutUs">About Us</a></li>
                                     <li><a href="index.html#whyUs">Why Us</a></li>
+                                    <li><a href="index.html#themes">Themes</a></li>
                                     <li><a href="index.html#packages">Packages</a></li>
                                  </ul>
                               </div>
@@ -187,23 +188,23 @@
                                  </ul>
                               </div>
                            </div> -->
-                           <div class="col-md-12">
+                           <div class="col-xl-12">
                               <div class="row margin_top_50">
-                                 <div class="col-md-10 offset-md-1">
+                                 <div class="col-xl-10 col-12 offset-xl-1">
                                     <div class="row">
-                                       <div class="col-sm-4">
+                                       <div class="col-xl-4 col-12 mb-xl-0 mb-2">
                                           <div class="full cont_info">
                                              <i class="fa fa-map-marker"></i>
                                              <span>Klang Valley, Selangor <sup>MY</sup></span>
                                           </div>
                                        </div>
-                                       <div class="col-sm-4">
+                                       <div class="col-xl-4 col-12 mb-xl-0 mb-2">
                                           <div class="full cont_info">
                                              <i class="fa fa-phone"></i>
-                                             <span>016 7173 814</span>
+                                             <span>016 7173 814</span>   
                                           </div>
                                        </div>
-                                       <div class="col-sm-4">
+                                       <div class="col-xl-4 col-12 mb-xl-0 mb-2">
                                           <div class="full cont_info">
                                              <i class="fa fa-envelope" style="font-size: 17px;"></i>
                                              <span>homismakeover@gmail.com</span>
