--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <!-- end section -->
 
       <!-- 'Theme' section -->
-      <section class="layout_padding" id="theme">
+      <section class="layout_padding" id="themes">
          <div class="container mb-5 wow fadeInDown px-xl-0 px-5" style="min-height: 1000px;">
             <div class="row">
                <div class="col-md-12">
@@ -728,6 +728,7 @@
                                     <li><a href="#home">Home</a></li>
                                     <li><a href="#aboutUs">About Us</a></li>
                                     <li><a href="#whyUs">Why Us</a></li>
+                                    <li><a href="#themes">Themes</a></li>
                                     <li><a href="#packages">Packages</a></li>
                                  </ul>
                               </div>
