--- a/packages.html
+++ b/packages.html
@@ -83,81 +83,66 @@
          </div>
       </div>
       <!-- End Banner Slider -->
-      <!-- section -->
-      <section class="layout_padding">
-         <div class="container">
+      <!-- 'Packages' section -->
+      <section class="layout_padding" id="packages">
+         <div class="container wow fadeInDown">
             <div class="row">
                <div class="col-md-12">
-                  <div class="full heading_s1 text_align_center">
-                     <h3>Testimonial</h3>
+                  <div class="full heading_s1">
+                     <h3>Packages</h3>
                   </div>
-                  <div class="testimonial_slider">
-                     <div class="full">
-                        <div class="client_slider_main2">
-                           <div id="testimonial2" class="client_slider_main owl-carousel owl-theme">
-                              <div class="item">
-                                 <div class="row">
-                                    <div class="col-md-3">
-                                       <div class="full">
-                                          <div class="center"> <img src="images/layout_img/testimo_profile.png" alt="#" /> </div>
-                                       </div>
-                                    </div>
-                                    <div class="col-md-9">
-                                       <div class="full">
-                                          <div class="testi_head">
-                                             <h4>Lianna john</h4>
-                                             <p>Home Rentel</p>
-                                          </div>
-                                       </div>
-                                       <div class="full testi_slide">
-                                          <p><img src="images/layout_img/quate_left_test.png" alt="#" />Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</p>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                              <div class="item">
-                                 <div class="row">
-                                    <div class="col-md-3">
-                                       <div class="full">
-                                          <div class="center"> <img src="images/layout_img/testimo_profile.png" alt="#" /> </div>
-                                       </div>
-                                    </div>
-                                    <div class="col-md-9">
-                                       <div class="full">
-                                          <div class="testi_head">
-                                             <h4>Rosy Mike</h4>
-                                             <p>Home Rentel</p>
-                                          </div>
-                                       </div>
-                                       <div class="full testi_slide">
-                                          <p><img src="images/layout_img/quate_left_test.png" alt="#" />Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</p>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                              <div class="item">
-                                 <div class="row">
-                                    <div class="col-md-3">
-                                       <div class="full">
-                                          <div class="center"> <img src="images/layout_img/testimo_profile.png" alt="#" /> </div>
-                                       </div>
-                                    </div>
-                                    <div class="col-md-9">
-                                       <div class="full">
-                                          <div class="testi_head">
-                                             <h4>William Butter</h4>
-                                             <p>Home Rentel</p>
-                                          </div>
-                                       </div>
-                                       <div class="full testi_slide">
-                                          <p><img src="images/layout_img/quate_left_test.png" alt="#" />Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</p>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
+               </div>
+            </div>
+            <div class="row">
+               <div class="col-xl-6 col-12">
+                  <div class="blog_style">
+                     <div class="full news_blog mb-3">
+                        <img class="w-100" src="images/package_img1.png" alt="#" />
                      </div>
+                     <div class="full post_colum">
+                        <ul>
+                           <li>Post By : HOMIS</li>
+                        </ul>
+                     </div>
+                     <div class="full mb-2">
+                        <h3>Package 1 - Living + Dining Hall</h3>
+                        <span class="h4 font-weight-bold" style="color: #776B5D;">RM 10,900</span>
+                        <br>
+                        <br>
+                        <ul class="ml-4" style="list-style: circle;">
+                           <li><p>For owner with lower budget.</p></li>
+                           <li><p>Very appealing for marketing.</p></li>
+                           <li><p>Leave the rooms empty for tenant to enjoy flexibility of decoration.</p></li>
+                        </ul>
+                     </div>
+                     <!-- <div class="full d-flex justify-content-center">
+                        <a class="read_more_bt" href="about.html">Read More</a>
+                     </div> -->
+                  </div>
+               </div>
+               <div class="col-xl-6 col-12">
+                  <div class="blog_style">
+                     <div class="full news_blog mb-3">
+                        <img class="w-100" src="images/package_img2.png" alt="#" />
+                     </div>
+                     <div class="full post_colum">
+                        <ul>
+                           <li>Post By : HOMIS</li>
+                        </ul>
+                     </div>
+                     <div class="full pb-2">
+                        <h3>Package 2 - Living + Dining Hall + Masterroom</h3>
+                        <span class="h4 font-weight-bold" style="color: #776B5D;">RM 15,800</span>
+                        <br>
+                        <br>
+                        <ul class="ml-4" style="list-style: circle;">
+                           <li><p>For owner with medium budget.</p></li>
+                           <li><p>Leave 1 medium room empty for tenants to design according to their needs.</p></li>
+                        </ul>
+                     </div>
+                     <!-- <div class="full d-flex justify-content-center">
+                        <a class="read_more_bt" href="about.html">Read More</a>
+                     </div> -->
                   </div>
                </div>
             </div>
@@ -172,8 +157,8 @@
                   <div class="full footer_top">
                      <div class="container">
                         <div class="row">
-                           <div class="col-md-2"></div>
-                           <div class="col-md-4 col-12">
+                           <div class="col-xl-2 col-12"></div>
+                           <div class="col-xl-4 col-12">
                               <div class="full f_logo">
                                  <img src="img/logo_home_small.png" alt="#" width="200px"/>
                               </div>
@@ -181,8 +166,8 @@
                                  <p>Interior styling & property makeover with most afforable price in town.</p>
                               </div>
                            </div>
-                           <div class="col-md-1"></div>
-                           <div class="col-md-4 col-12">
+                           <div class="col-xl-1"></div>
+                           <div class="col-xl-4 col-12">
                               <div class="full heading_footer">
                                  <h3>Menu</h3>
                               </div>
@@ -191,6 +176,7 @@
                                     <li><a href="index.html#home">Home</a></li>
                                     <li><a href="index.html#aboutUs">About Us</a></li>
                                     <li><a href="index.html#whyUs">Why Us</a></li>
+                                    <li><a href="index.html#themes">Themes</a></li>
                                     <li><a href="index.html#packages">Packages</a></li>
                                  </ul>
                               </div>
@@ -212,23 +198,23 @@
                                  </ul>
                               </div>
                            </div> -->
-                           <div class="col-md-12">
+                           <div class="col-xl-12">
                               <div class="row margin_top_50">
-                                 <div class="col-md-10 offset-md-1">
+                                 <div class="col-xl-10 col-12 offset-xl-1">
                                     <div class="row">
-                                       <div class="col-sm-4">
+                                       <div class="col-xl-4 col-12 mb-xl-0 mb-2">
                                           <div class="full cont_info">
                                              <i class="fa fa-map-marker"></i>
                                              <span>Klang Valley, Selangor <sup>MY</sup></span>
                                           </div>
                                        </div>
-                                       <div class="col-sm-4">
+                                       <div class="col-xl-4 col-12 mb-xl-0 mb-2">
                                           <div class="full cont_info">
                                              <i class="fa fa-phone"></i>
-                                             <span>016 7173 814</span>
+                                             <span>016 7173 814</span>   
                                           </div>
                                        </div>
-                                       <div class="col-sm-4">
+                                       <div class="col-xl-4 col-12 mb-xl-0 mb-2">
                                           <div class="full cont_info">
                                              <i class="fa fa-envelope" style="font-size: 17px;"></i>
                                              <span>homismakeover@gmail.com</span>
