remove double title

--- a/packages.html
+++ b/packages.html
@@ -86,13 +86,13 @@
       <!-- 'Packages' section -->
       <section class="layout_padding" id="packages">
          <div class="container wow fadeInDown">
-            <div class="row">
+            <!-- <div class="row">
                <div class="col-md-12">
                   <div class="full heading_s1">
                      <h3>Packages</h3>
                   </div>
                </div>
-            </div>
+            </div> -->
             <div class="row">
                <div class="col-xl-6 col-12">
                   <div class="blog_style">
