--- a/themes.html
+++ b/themes.html
@@ -86,13 +86,13 @@
       <!-- section -->
       <section class="layout_padding" id="themes">
          <div class="container mb-5 wow fadeInDown px-xl-0 px-5" style="min-height: 1000px;">
-            <div class="row">
+            <!-- <div class="row">
                <div class="col-md-12">
                   <div class="full heading_s1">
                      <h3>Themes</h3>
                   </div>
                </div>
-            </div>
+            </div> -->
             <div class="row mb-5">
                <div class="col-12 px-5">
                   <div class="theme-owl-carousel">
