--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
                   </div>
                   <div class="col-xl-5 col-12 px-xl-0 px-5">
                      <div class="full heading_s1">
-                        <h3>About Us</h3>
+                        <!-- <h3>About Us</h3> -->
                         <ul>
                            <li><p>Specialize in providing affordable property makeover solutions for both residential and commercial properties.</p></li>
                            <li><p>As property investors ourselves, we truly understand what an investor needs: To stand out from competitors, generate higher rental yield, with minimal spending.</p></li>
